<resources>
    <string name="app_name">RealEstateManager v2</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="filters_title">Filters :</string>
    <string name="price_range_tv">Price range</string>
    <string name="size_range_tv">Size range</string>
    <string name="rooms_tv">Number of rooms</string>
    <string name="bedrooms_tv">Bedrooms</string>
    <string name="bathrooms_tv">Bathrooms</string>
    <string name="type_tv">Type</string>
    <string name="villa">Villa</string>
    <string name="mansion">Mansion</string>
    <string name="apartment">Apartment</string>
    <string name="house">House</string>
    <string name="all_types">All</string>
    <string name="poi_tv">Points of interests</string>
    <string name="park">Park</string>
    <string name="school">School</string>
    <string name="shop">Shop</string>
    <string name="museum">Museum</string>
    <string name="restaurant">Restaurant</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="date_sold_tv">Date Sold</string>
    <string name="date_added_tv">Date Added</string>
    <string name="details_tv">Details :</string>
    <string name="type_detail">Apartment</string>
    <string name="exemple_address">42 Avenue Vide, 25000, BESANCON</string>
    <string name="exemple_price">$1.285.000</string>
    <string name="exemple_description">Tu comprends, je suis mon meilleur modèle car entre penser et dire, il y a un monde de différence et c\'est très, très beau d\'avoir son propre moi-même ! C\'est cette année que j\'ai eu la révélation !\n You see, premièrement, on vit dans une réalité qu\'on a créée et que j\'appelle illusion et finalement tout refaire depuis le début.</string>
    <string name="exemple_agent">Added by John BISHOP\ncontact : serfosuien@gmail.com</string>
    <string name="exemple_date">Added on 21/04/1996</string>
    <string name="edit_estate">EDIT THIS ESTATE</string>
    <string name="app_title">Real Estate Manager</string>
    <string name="sold_tv">SOLD</string>
    <string name="exmple_poi">Park\nSchool\nShop\n</string>
    <string name="gallery_button">Gallery</string>
    <string name="camera_button">Camera</string>
    <string name="default_pic_title">test</string>
    <string name="date_hint">Date</string>
    <string name="before_radio">Before</string>
    <string name="after_radio">After</string>
    <string name="on_date_radio">On date</string>
    <string name="pictures_tv">Pictures</string>
    <string name="apply_filters_button">Apply filters</string>
    <string name="remove_filters_button">Remove filters</string>
    <string name="loan_sim_title">Loan simulation :</string>
    <string name="loan_amount_tv">Amount of the loan :</string>
    <string name="loan_duration_tv">Loan duration :</string>
    <string name="personal_investment_tv">Personal investment :</string>
    <string name="loan_rate_tv">Loan rate :</string>
    <string name="estimated_tv">Estimated monthly payments :</string>
    <string name="exemple_monthly">2.500$</string>
    <string name="address_tv">Address :</string>
    <string name="new_media_button">Add new media</string>
    <string name="detail_chip_exemple">8 Bedrooms</string>
    <string name="map_view_icon">Map View</string>
    <string name="loan_simulation_icon">Loan Simulation</string>
    <string name="picture_title_hint">Title of the picture</string>
    <string name="new_description_hint">Add a description here</string>
    <string name="estate_price_new">Price of the estate*</string>
    <string name="type_new">Type (mansion, villa, apartment, etc)*</string>
    <string name="surface_new">Surface*</string>
    <string name="rooms">Rooms</string>
    <string name="way_new">Way*</string>
    <string name="complement">Complement</string>
    <string name="zip_new">Zip code*</string>
    <string name="city_new">City*</string>
    <string name="filter_pic_hint">Minimum pictures</string>
    <string name="loan_rate_hint">Keep empty for 1.25%</string>
    <string name="price_edit">Price of the estate</string>
    <string name="type_edit">Type (mansion, villa, apartment, etc)</string>
    <string name="surface_edit">Surface</string>
    <string name="rooms_edi">Rooms</string>
    <string name="rooms_edit">Rooms</string>
    <string name="way_edit">Way</string>
    <string name="zip_edit">Zip code</string>
    <string name="city_edit">City</string>
    <string name="accept_edit_button">ACCEPT THE CHANGES</string>
    <string name="location_exemple">Upper East Side</string>
    <string name="sold_exemple">Sold the 27/08/2021</string>
    <string name="pic_title_exemple">Facade</string>
    <string name="pic_title_exmple2">Pool Side</string>
</resources>