<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="6dp"
    android:layout_marginVertical="6dp"

    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp">

            <ImageView
                android:id="@+id/house_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                android:src="@drawable/mansion"
                tools:ignore="ImageContrastCheck" />

            <View
                android:id="@+id/sold_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/estate_sold_banner"
                android:visibility="gone" />

            <TextView
                android:id="@+id/sold_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sold_tv"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/house_type"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:hint="@string/mansion"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/house_location"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:hint="@string/location_exemple" />

            <TextView
                android:id="@+id/house_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:hint="@string/exemple_price"
                android:textColor="@color/blue_600"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/date_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:visibility="gone"
                android:hint="@string/sold_exemple"
                android:textStyle="bold|italic"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>