<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded">

        <View
            android:id="@+id/scrim_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="?attr/scrimBackground"
            android:visibility="gone" />

        <TextView
            android:id="@+id/loan_title"
            style="?attr/textAppearanceHeadline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/loan_sim_title"
            android:textColor="@color/blue_300"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loan_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/foreground_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:paddingTop="@dimen/grid_3"
                android:paddingBottom="@dimen/grid_4"
                tools:layout_editor_absoluteY="24dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/amount_tv"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loan_amount_tv"
                    android:textColor="@color/blue_50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/amount_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stepSize="50000"
                    android:valueFrom="100000"
                    android:valueTo="1000000"
                    app:labelBehavior="withinBounds"
                    app:layout_constraintTop_toBottomOf="@id/amount_tv" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/duration_tv"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loan_duration_tv"
                    android:textColor="@color/blue_50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/amount_slider" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/duration_slider"
                    android:layout_width="match_parent"
                    app:labelBehavior="withinBounds"
                    android:stepSize="1"
                    android:valueFrom="1"
                    android:valueTo="35"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/duration_tv" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/investment_tv"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_investment_tv"
                    android:textColor="@color/blue_50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/duration_slider" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/investment_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/investment_tv"
                    app:prefixText="$ ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/personal_investment_tv"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rate_tv"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loan_rate_tv"
                    android:textColor="@color/blue_50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/investment_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rate_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rate_tv"
                    app:suffixText="% ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/loan_rate_hint"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="16dp"
                    app:layout_constraintTop_toBottomOf="@id/rate_layout">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/monthly_title"
                            style="?attr/textAppearanceHeadline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/estimated_tv"
                            android:textColor="@color/blue_600"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/monthly_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/exemple_monthly"
                            android:textColor="@color/blue_800"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/monthly_title" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
